@@ -36,3 +36,4 @@
 #undef GETTEXT_PACKAGE
 #undef HAVE_LOGINCAP
 #undef HAVE_SYS_SOCKIO_H
+#undef HAVE_SCHED_YIELD
