@@ -171,12 +171,20 @@ AM_GLIB_GNU_GETTEXT
 EXTRA_DAEMON_LIBS=""
 EXTRA_CHOOSER_LIBS=""
 
-AC_CHECK_FUNC(socket,,[AC_CHECK_LIB(socket,socket, [
-		     EXTRA_DAEMON_LIBS="$EXTRA_DAEMON_LIBS -lsocket"
-		     EXTRA_CHOOSER_LIBS="$EXTRA_CHOOSER_LIBS -lsocket"])])
-AC_CHECK_FUNC(gethostbyname,,[AC_CHECK_LIB(nsl,gethostbyname, [
-		     EXTRA_DAEMON_LIBS="$EXTRA_DAEMON_LIBS -lnsl"
-		     EXTRA_CHOOSER_LIBS="$EXTRA_CHOOSER_LIBS -lnsl"])])
+AC_CHECK_FUNC(socket,,[
+	      AC_CHECK_LIB(socket,socket, [
+			   EXTRA_DAEMON_LIBS="$EXTRA_DAEMON_LIBS -lsocket"
+			   EXTRA_CHOOSER_LIBS="$EXTRA_CHOOSER_LIBS -lsocket"])])
+AC_CHECK_FUNC(gethostbyname,,[
+	      AC_CHECK_LIB(nsl,gethostbyname, [
+			   EXTRA_DAEMON_LIBS="$EXTRA_DAEMON_LIBS -lnsl"
+			   EXTRA_CHOOSER_LIBS="$EXTRA_CHOOSER_LIBS -lnsl"])])
+AC_CHECK_FUNC(sched_yield,[
+	      AC_DEFINE(HAVE_SCHED_YIELD)],[
+	      AC_CHECK_LIB(rt,sched_yield, [
+			   AC_DEFINE(HAVE_SCHED_YIELD)
+			   EXTRA_DAEMON_LIBS="$EXTRA_DAEMON_LIBS -lrt"], [
+			   echo "No sched_yield found"])])
 
 dnl ## gdmopen building
 dnl There are perhaps others where this works
